--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ click==7.1.2
 cycler==0.10.0
 Flask==1.1.1
 gunicorn==19.9.0
+imbalanced-learn==0.7.0
+imblearn==0.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 joblib==0.17.0
